--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,10 @@
             <artifactId>liquibase-maven-plugin</artifactId>
             <version>3.7.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
 
